# hmi

./: .gitignore  CMakeLists.txt  gltf简介.md  hmi_backend.py  main.cpp
include/: FpsCounter.hpp  Scene.hpp  tiny_gltf.h
include/audioplayder/: AudioPlayer.hpp
include/controller/: ModelController.hpp  UDPDataManager.hpp
include/importer/: ModelImporter.hpp
include/loader/: GLTFLoader.hpp
include/model/: BaseModel.hpp  ImportedModel.hpp  ModelManager.hpp
include/ui/: TextRenderer.hpp
models/: clauteY.py  container.glb  cube.glb  otruck.glb  person.glb  truck.glb  wtruck.glb
models/modeltrans/: merge.py  truck.glb
models/modeltrans/prehandle/: handlemid.py  midotruck.glb  midtruck.glb  prehandle.py  prehandleone.py
models/modeltrans/prehandle/gltfs/: container.gltf  person.gltf  truck.gltf
models/modeltrans/prehandle/origin/: otruck.glb  person.glb  wtruck.glb
models/modeltrans/prehandle/output/: container.glb  otruck.glb  person.glb  wtruck.glb
models/modeltrans/test/: merge.py  mid.py  newwtruck.glb  otruck.glb  wtruck.glb
models/prehandle/: otruck.glb
models/prehandle/backup/: otruck.glb
resources/audio/handle/: handle.sh
resources/models/: otruck.glb  person.glb  truck.glb  wtruck.glb
src/: FpsCounter.cpp  Scene.cpp
src/audioplayder/: AudioPlayer.cpp
src/controller/: ModelController.cpp  UDPDataManager.cpp
src/importer/: ModelImporter.cpp
src/loader/: GLTFLoader.cpp
src/model/: BaseModel.cpp  ImportedModel.cpp  ModelManager.cpp
src/ui/: TextRenderer.cpp
